--- a/module-1/index.html
+++ b/module-1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
 	<meta charset="UTF-8">
 	<title>Modeuke1</title>
@@ -13,14 +13,12 @@
 	<div>
 		<h1>Заголовок Страницы</h1>
 	</div>
-	<div align="center">
-		<img src="https://cdn.pixabay.com/photo/2015/12/13/09/42/banner-1090835_960_720.jpg" width=80% alt="sky" align="center">
+	<div>
+		<img src="https://cdn.pixabay.com/photo/2015/12/13/09/42/banner-1090835_960_720.jpg" alt="sky">
 	</div>
+			<h4 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quae, amet hic, dignissimos dolorem fugit iusto possimus veniam, asperiores culpa libero eaque! Assumenda culpa inventore aliquid dolorum a laborum sunt.</h4>
 	<p>
-		<h4 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quae, amet hic, dignissimos dolorem fugit iusto possimus veniam, asperiores culpa libero eaque! Assumenda culpa inventore aliquid dolorum a laborum sunt.</h4>
-	</p>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates adipisci praesentium excepturi, sapiente et dolore, iste delectus earum cumque officia voluptatibus sunt optio accusamus, mollitia, fugiat ullam. Ipsum labore, veniam optio eligendi consequuntur voluptatem illo quisquam incidunt delectus accusantium expedita velit, dolorem suscipit alias numquam officiis qui consectetur reiciendis ratione saepe ut quas reprehenderit. Debitis, optio, consequuntur. Excepturi quia aut molestias cupiditate, ipsam, molestiae. Amet laudantium quis praesentium corporis nostrum ea molestias architecto quidem aspernatur possimus placeat reiciendis aperiam sapiente, incidunt cum, necessitatibus, culpa ducimus officia sit repellat. Temporibus nostrum, illum, itaque libero eius voluptatum, ullam assumenda quod maxime ea omnis quae ratione sapiente quasi minus, maiores laudantium amet explicabo aliquam at consectetur laboriosam odit? Optio ipsam dicta maxime, labore nesciunt velit ad expedita temporibus dolorum nisi nemo et rerum non tempore, at ullam dolor id aliquam nulla! Laboriosam recusandae minus, odit accusantium libero, laborum facere nulla architecto non illo fugit, optio dolores molestiae iste eius quam nemo enim assumenda magni vel. Fugit quidem dolore omnis sed animi dolor perspiciatis similique aperiam expedita, reprehenderit tempora libero accusantium neque minima corporis, culpa deserunt obcaecati delectus at quisquam error voluptatem. Vitae magnam fuga voluptate est rem earum asperiores, praesentium laudantium expedita cumque!
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates adipisci praesentium excepturi, sapiente et dolore, iste delectus earum cumque officia voluptatibus sunt optio accusamus, mollitia, fugiat ullam. Ipsum labore, veniam optio eligendi consequuntur voluptatem illo quisquam incidunt delectus accusantium expedita velit, dolorem suscipit alias numquam officiis qui consectetur reiciendis ratione saepe ut quas reprehenderit. Debitis, optio, consequuntur. Excepturi quia aut molestias cupiditate, ipsam, molestiae. Amet laudantium quis praesentium corporis nostrum ea molestias architecto quidem aspernatur possimus placeat reiciendis aperiam sapiente, incidunt cum, necessitatibus, culpa ducimus officia sit repellat. Temporibus nostrum, illum, itaque libero eius voluptatum, ullam assumenda quod maxime ea omnis quae ratione sapiente quasi minus, maiores laudantium amet explicabo aliquam at consectetur laboriosam odit? Optio ipsam dicta maxime, labore nesciunt velit ad expedita temporibus dolorum nisi nemo et rerum non tempore, at ullam dolor id aliquam nulla! Laboriosam recusandae minus, odit accusantium libero, laborum facere nulla architecto non illo fugit, optio dolores molestiae iste eius quam nemo enim assumenda magni vel. Fugit quidem dolore omnis sed animi dolor perspiciatis similique aperiam expedita, reprehenderit tempora libero accusantium neque minima corporis, culpa deserunt obcaecati delectus at quisquam error voluptatem. Vitae magnam fuga voluptate est rem earum asperiores, praesentium laudantium expedita cumque!
 	</p>
 	<div>
 		<h2>Подзаголовок</h2>
