--- a/module-4/index.html
+++ b/module-4/index.html
@@ -49,8 +49,7 @@
 			<h2>TESTIMONIAL</h2>
 			<p>
 				<span class="quote">
-					&#10077 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit. &#10078 <br> <br>
-				</span>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit edfeswfw ewfew</span>
 			</p>
 			<br>
 			<h5 align="center">Mark Jonson</h5>
