--- a/module-4/index.html
+++ b/module-4/index.html
@@ -52,8 +52,8 @@
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit edfeswfw ewfew</span>
 			</p>
 			<br>
-			<h5 align="center">Mark Jonson</h5>
-			<p align="center">Lorem ipsum dolor sit amet.</p>
+			<h5>Mark Jonson</h5>
+			<p class="center">Lorem ipsum dolor sit amet.</p>
     	</div>
 
 
