--- a/module-4/index.html
+++ b/module-4/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Module-4</title>
 	<link rel="stylesheet" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet" >
 </head>
 <body>
 	<div class="wrapper">
@@ -16,11 +18,11 @@
 		</div>
 		<div class="second_column">
 			<h2>Lorem ipsum.</h2>
-			<h4>Lorem ipsum.</h4>
+			<h4 class="circle">Lorem ipsum.</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
-			<h4>Lorem ipsum.</h4>
+			<h4 class="circle">Lorem ipsum.</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
-			<h4>Lorem ipsum.</h4>
+			<h4 class="circle">Lorem ipsum.</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
 		</div>
 		<hr>
@@ -47,8 +49,8 @@
 		</div>
 		<div class="second_column">
 			<h2>TESTIMONIAL</h2>
-			<p>
-				<span class="quote">
+			<p class="bubble text_center">
+				<span>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit edfeswfw ewfew</span>
 			</p>
 			<br>
