--- a/module-4/index.html
+++ b/module-4/index.html
@@ -51,7 +51,8 @@
 			<h2>TESTIMONIAL</h2>
 			<p class="bubble text_center">
 				<span>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit edfeswfw ewfew</span>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit edfeswfw ewfew
+				</span>
 			</p>
 			<br>
 			<h5>Mark Jonson</h5>
