--- a/module-3/index.html
+++ b/module-3/index.html
@@ -11,61 +11,61 @@
 			<h1>Заголовок Страницы</h1>
 		</div>
 		<div>
-			<img src="https://cdn.pixabay.com/photo/2015/12/13/09/42/banner-1090835_960_720.jpg" alt="sky">
+			<img src="img/plain.jpg" alt="plain">
 		</div>
 		<div>	
-				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quae, amet hic, dignissimos dolorem fugit iusto possimus veniam, asperiores culpa libero eaque! Assumenda culpa inventore aliquid dolorum a laborum sunt.</h4>
-		<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates adipisci praesentium excepturi, sapiente et dolore, iste delectus earum cumque officia voluptatibus sunt optio accusamus, mollitia, fugiat ullam. Ipsum labore, veniam optio eligendi consequuntur voluptatem illo quisquam incidunt delectus accusantium expedita velit, dolorem suscipit alias numquam officiis qui consectetur reiciendis ratione saepe ut quas reprehenderit. Debitis, optio, consequuntur. Excepturi quia aut molestias cupiditate, ipsam, molestiae. Amet laudantium quis praesentium corporis nostrum ea molestias architecto quidem aspernatur possimus placeat reiciendis aperiam sapiente, incidunt cum, necessitatibus, culpa ducimus officia sit repellat. Temporibus nostrum, illum, itaque libero eius voluptatum, ullam assumenda quod maxime ea omnis quae ratione sapiente quasi minus, maiores laudantium amet explicabo aliquam at consectetur laboriosam odit? Optio ipsam dicta maxime, labore nesciunt velit ad expedita temporibus dolorum nisi nemo et rerum non tempore, at ullam dolor id aliquam nulla! Laboriosam recusandae minus, odit accusantium libero, laborum facere nulla architecto non illo fugit, optio dolores molestiae iste eius quam nemo enim assumenda magni vel. Fugit quidem dolore omnis sed animi dolor perspiciatis similique aperiam expedita, reprehenderit tempora libero accusantium neque minima corporis, culpa deserunt obcaecati delectus at quisquam error voluptatem. Vitae magnam fuga voluptate est rem earum asperiores, praesentium laudantium expedita cumque!
+		<h4>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quae, amet hic, dignissimos dolorem fugit iusto.
+		</h4>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates adipisci praesentium excepturi, sapiente et dolore, iste delectus earum cumque officia voluptatibus sunt optio accusamus, mollitia, fugiat ullam. Ipsum labore, veniam optio eligendi consequuntur voluptatem illo quisquam incidunt delectus accusantium expedita velit, dolorem suscipit alias numquam officiis qui consectetur reiciendis ratione saepe ut quas reprehenderit. Debitis, optio, consequuntur. Excepturi quia aut molestias cupiditate, ipsam, molestiae. Amet laudantium quis praesentium corporis nostrum ea molestias architecto quidem aspernatur possimus placeat reiciendis aperiam sapiente, incidunt cum, necessitatibus, culpa ducimus officia sit repellat.
 		</p>
 		</div>
 		<div>
 			<h2>Подзаголовок</h2>
-			<ol>
-				<li>
+				<ul>
 					<h4>Lorem ipsum dolor.</h4>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, magni incidunt deleniti dignissimos eius voluptas maxime facilis, natus esse dolorum alias labore neque ea rerum quaerat cumque possimus ducimus eligendi similique provident! Maxime velit assumenda ad distinctio perspiciatis doloribus fuga qui veniam esse dolore reprehenderit, ut, accusamus et vel laboriosam.
 					</p>
-				</li>
-				<li>
+				</ul>
+				<ul>
 					<h4>Lorem ipsum dolor.</h4>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, magni incidunt deleniti dignissimos eius voluptas maxime facilis, natus esse dolorum alias labore neque ea rerum quaerat cumque possimus ducimus eligendi similique provident! Maxime velit assumenda ad distinctio perspiciatis doloribus fuga qui veniam esse dolore reprehenderit, ut, accusamus et vel laboriosam.
 					</p>
-				</li>
-				<li>
+				</ul>
+				<ul>
 					<h4>Lorem ipsum dolor.</h4>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, magni incidunt deleniti dignissimos eius voluptas maxime facilis, natus esse dolorum alias labore neque ea rerum quaerat cumque possimus ducimus eligendi similique provident! Maxime velit assumenda ad distinctio perspiciatis doloribus fuga qui veniam esse dolore reprehenderit, ut, accusamus et vel laboriosam.
 					</p>
-				</li>
-			</ol>
+				</ul>
 		</div>
-
+		<hr>
 		<div>
 		<h2>Lorem ipsum dolor sit.</h2>	
-		<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione incidunt error nam quae at optio blanditiis iure molestias voluptas dolorem sapiente accusantium iste ducimus, explicabo!</h4>
+		<h4 class="regular">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione incidunt error nam quae at optio blanditiis iure molestias voluptas dolorem sapiente accusantium iste ducimus, explicabo!</h4>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio libero a, earum totam placeat cum provident sit tempore voluptates saepe fugit, alias ex pariatur fugiat amet et debitis ipsam commodi veritatis repellat? Eos impedit quia ipsa quos fuga molestiae in corporis et recusandae id. Earum beatae aut, est nihil nobis possimus, vitae illo, adipisci facere unde dicta. Quo quidem enim ipsam magnam officiis delectus, molestiae culpa tenetur sapiente. Facilis assumenda ut accusantium rem necessitatibus totam reiciendis excepturi porro fugit nam voluptatibus, aliquam quidem nulla, quis aliquid asperiores placeat. Inventore soluta sed fugiat dolore, veniam doloremque laborum. Porro sunt doloremque veniam.
 		</p>
 		</div>
-		<div class="content">	
-			
-				Lorem ipsum dolor sit amet, consectetur adipisicing. <br>
-				Lorem ipsum dolor sit amet, consectetur adipisicing. <br>
-				Lorem ipsum dolor sit amet, consectetur adipisicing. <br>
-				Lorem ipsum dolor sit amet, consectetur adipisicing. <br>
+		<div class="content">
+			<ul>
+				<li>Lorem ipsum dolor.</li>
+				<li>Voluptate, explicabo, nulla!</li>
+				<li>Officiis, similique, fugit.</li>
+				<li>Assumenda, autem, dolore!</li>
+				<li>Iusto, similique, quaerat.</li>
+				<li>Enim, vitae, nulla?</li>
+				<li>Sint, molestias, officia.</li>
+				<li>Praesentium culpa, laudantium!</li>
+				<li>Rerum, delectus, odit!</li>
+			</ul>
+
 			
 		</div>
-		<div class="content">	
-			
-				Lorem ipsum dolor sit amet, consectetur adipisicing. <br>
-				Lorem ipsum dolor sit amet, consectetur adipisicing. <br>
-				Lorem ipsum dolor sit amet, consectetur adipisicing. <br>
-				Lorem ipsum dolor sit amet, consectetur adipisicing. <br>
-			
-		</div>
+
 	</div>
 
 </body>
