--- a/module-3/index.html
+++ b/module-3/index.html
@@ -24,22 +24,23 @@
 		<div>
 			<h2>Подзаголовок</h2>
 				<ul>
-					<h4>Lorem ipsum dolor.</h4>
+					<li>
+						<h4>Lorem ipsum dolor.</h4>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, magni incidunt deleniti dignissimos eius voluptas maxime facilis, natus esse dolorum alias labore neque ea rerum quaerat cumque possimus ducimus eligendi similique provident! Maxime velit assumenda ad distinctio perspiciatis doloribus fuga qui veniam esse dolore reprehenderit, ut, accusamus et vel laboriosam.
 					</p>
-				</ul>
-				<ul>
-					<h4>Lorem ipsum dolor.</h4>
+					<li>
+						<h4>Lorem ipsum dolor.</h4>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, magni incidunt deleniti dignissimos eius voluptas maxime facilis, natus esse dolorum alias labore neque ea rerum quaerat cumque possimus ducimus eligendi similique provident! Maxime velit assumenda ad distinctio perspiciatis doloribus fuga qui veniam esse dolore reprehenderit, ut, accusamus et vel laboriosam.
 					</p>
-				</ul>
-				<ul>
-					<h4>Lorem ipsum dolor.</h4>
+					</li>
+					<li>
+						<h4>Lorem ipsum dolor.</h4>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, magni incidunt deleniti dignissimos eius voluptas maxime facilis, natus esse dolorum alias labore neque ea rerum quaerat cumque possimus ducimus eligendi similique provident! Maxime velit assumenda ad distinctio perspiciatis doloribus fuga qui veniam esse dolore reprehenderit, ut, accusamus et vel laboriosam.
 					</p>
+					</li>
 				</ul>
 		</div>
 		<hr>
@@ -53,13 +54,13 @@
 		<div class="content">
 			<ul>
 				<li>Lorem ipsum dolor.</li>
-				<li>Voluptate, explicabo, nulla!</li>
-				<li>Officiis, similique, fugit.</li>
-				<li>Assumenda, autem, dolore!</li>
-				<li>Iusto, similique, quaerat.</li>
+				<li>Voluptate, explicabo!</li>
+				<li>Officiis, similique.</li>
+				<li>Assumenda, autem!</li>
+				<li>Iusto, similique.</li>
 				<li>Enim, vitae, nulla?</li>
 				<li>Sint, molestias, officia.</li>
-				<li>Praesentium culpa, laudantium!</li>
+				<li>Praesentium culpa!</li>
 				<li>Rerum, delectus, odit!</li>
 			</ul>
 
