--- a/module-4/index.html
+++ b/module-4/index.html
@@ -12,12 +12,13 @@
 		<div class="first_column">
 			<h2>AGENCY PROFILE</h2>
 			<img src="img/NY.jpg" alt="New Year">
+			<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, modi.</h4>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aperiam distinctio porro quod quo exercitationem consectetur, placeat, ipsum totam temporibus incidunt, neque deserunt. Aperiam nam assumenda necessitatibus, dignissimos architecto eligendi! Nesciunt placeat, assumenda quidem earum ducimus, inventore obcaecati iste commodi! Aut molestias ea dolore, ut ducimus, ab suscipit nobis dolor, saepe sint nesciunt animi? Exercitationem rerum, consectetur beatae a officiis est, quibusdam consequatur itaque veniam ratione, placeat tempore, harum vitae suscipit totam reiciendis esse! In numquam cum quidem temporibus consequatur ea magni sit aut ullam perspiciatis corporis inventore aspernatur qui dolores, nobis iusto accusamus, natus esse pariatur nostrum libero vitae sapiente. Voluptate, distinctio labore adipisci ullam quo dolores quisquam necessitatibus deserunt ex temporibus sunt aliquam odit earum sapiente autem soluta officiis inventore alias accusantium accusamus asperiores nam. Maiores similique deleniti dolor incidunt eligendi accusamus nesciunt perspiciatis aspernatur, impedit fugiat iure, minima reprehenderit. Magnam, animi, laborum. Nihil consectetur facere at quisquam.
 			</p>
 		</div>
 		<div class="second_column">
-			<h2>Lorem ipsum.</h2>
+			<h2 class="left-margin">Lorem ipsum.</h2>
 			<h4 class="circle">Lorem ipsum.</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
 			<h4 class="circle">Lorem ipsum.</h4>
@@ -30,40 +31,33 @@
 			<h2>WHAT WE OFFER</h2>
 			<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, vero, deleniti. Nihil at facilis hic, laudantium optio labore reiciendis porro veritatis eos vero autem, delectus voluptas, officiis ratione rerum fugiat, perferendis qui consequuntur quod. Impedit repudiandae ab asperiores voluptatem culpa aspernatur tempore quisquam ut eos nostrum explicabo, possimus aliquam, praesentium.</h5>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A sequi eum cumque odit temporibus obcaecati, molestiae, animi. Dolore dolorum laboriosam ea facilis provident officia, repellat soluta quibusdam quia? Fuga nihil porro soluta debitis, consectetur repudiandae perferendis praesentium itaque accusamus suscipit eos incidunt quidem vitae adipisci facere eaque animi eius laborum sequi asperiores sed, possimus aut repellendus ipsum laudantium. Nisi repellat minus ex. Incidunt ab veniam accusantium quod aliquam necessitatibus delectus fugit similique ullam optio eaque, id voluptate! Vero architecto sint, error quam ducimus expedita? Quae sed, sequi veritatis deserunt maiores, excepturi vero aliquam a illo atque vel ratione amet saepe.</p>
-
-			<div class="content">	
-			
-				<span>Lorem ipsum dolor.</span>
-				<span>Lorem ipsum dolor.</span>
-				<span>Lorem ipsum dolor.</span>
-				<span>Lorem ipsum dolor.</span>
-			
-			</div>
-			<div class="content">	
-				<span>Lorem ipsum dolor.</span>
-				<span>Lorem ipsum dolor.</span>
-				<span>Lorem ipsum dolor.</span>
-				<span>Lorem ipsum dolor.</span>
-			</div>
+		    <div class="content">
+				<ul>
+					<li>Lorem ipsum dolor.</li>
+					<li>Voluptate, explicabo!</li>
+					<li>Officiis, similique.</li>
+					<li>Assumenda, autem!</li>
+					<li>Iusto, similique.</li>
+					<li>Enim, vitae, nulla?</li>
+					<li>Sint, molestias, officia.</li>
+					<li>Praesentium culpa!</li>
+					<li>Rerum, delectus, odit!</li>
+				</ul>
+		</div>
 
 		</div>
-		<div class="second_column">
+		<div class="second_column text_center">
 			<h2>TESTIMONIAL</h2>
-			<p class="bubble text_center">
+			<p class="bubble">
 				<span>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit edfeswfw ewfew
 				</span>
 			</p>
 			<br>
 			<h5>Mark Jonson</h5>
-			<p class="center">Lorem ipsum dolor sit amet.</p>
+			<p>Lorem ipsum dolor sit amet.</p>
     	</div>
 
-
-
-
-
 	</div>
-
 </body>
 </html>
