--- a/module-4/index.html
+++ b/module-4/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet" >
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Arial">
 </head>
 <body>
 	<div class="wrapper">
