--- a/module-5/index.html
+++ b/module-5/index.html
@@ -4,13 +4,36 @@
 	<meta charset="UTF-8">
 	<title>Module 5</title>
 	<link rel="stylesheet" href="css/styles.css">
+		<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet" >
 </head>
 <body>
 	<header>	
-		header
+		<ul>
+			<li><a href="#">HOME</a></li>
+			<li><a href="#">ABOUT</a></li>
+			<li><a href="#">GALLERY</a></li>
+			<li><a href="#" class="logo"></a></li>
+			<li><a href="#">TOURS</a></li>
+			<li><a href="#">BLOG</a></li>
+			<li><a href="#">CONTACTS</a></li>
+			<li class="logo-text">JOURNEY<li>
+		</ul>
 	</header>	
-	<main   class="wrapper">	
-		main
+	<main>	
+        <!-- Images -->
+        <div class="slider"><img src="img/slider/1.jpg"/ width="900"> </div>
+		<div class="middle-text">TOP DESTINANTIONS</div>
+		<div class="details">
+			<img src="img/details/details.jpg" width="290">
+			<img src="img/details/details2.jpg" width="290">
+			<img src="img/details/details3.jpg" width="290">
+			<div class="detail-text">
+				<h3>VENICE</h3>
+				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
+			</div>
+		</div>
+
 	</main>	
 
 
