fix for module-3

--- a/module-3/index.html
+++ b/module-3/index.html
@@ -44,10 +44,11 @@
 				</ul>
 		</div>
 		<hr>
+
 		<div>
 		<h2>Lorem ipsum dolor sit.</h2>	
 		<h4 class="regular">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione incidunt error nam quae at optio blanditiis iure molestias voluptas dolorem sapiente accusantium iste ducimus, explicabo!</h4>
-		<p>
+		<p class="second-p">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio libero a, earum totam placeat cum provident sit tempore voluptates saepe fugit, alias ex pariatur fugiat amet et debitis ipsam commodi veritatis repellat? Eos impedit quia ipsa quos fuga molestiae in corporis et recusandae id. Earum beatae aut, est nihil nobis possimus, vitae illo, adipisci facere unde dicta. Quo quidem enim ipsam magnam officiis delectus, molestiae culpa tenetur sapiente. Facilis assumenda ut accusantium rem necessitatibus totam reiciendis excepturi porro fugit nam voluptatibus, aliquam quidem nulla, quis aliquid asperiores placeat. Inventore soluta sed fugiat dolore, veniam doloremque laborum. Porro sunt doloremque veniam.
 		</p>
 		</div>
@@ -63,8 +64,6 @@
 				<li>Praesentium culpa!</li>
 				<li>Rerum, delectus, odit!</li>
 			</ul>
-
-			
 		</div>
 
 	</div>
