some fix in module-5

--- a/module-5/index.html
+++ b/module-5/index.html
@@ -22,7 +22,16 @@
 	</header>	
 	<main>	
         <!-- Images -->
-        <div class="slider"><img src="img/slider/1.jpg"/ width="900"> </div>
+     	<div id="images">
+        	<img id="image1" src="img/slider/1.jpg" />
+        	<img id="image2" src="img/slider/2.jpg" />
+        	<img id="image3" src="img/slider/3.jpg" />
+    	</div>
+    	<div id="slider">
+        	<a href="#image1">1</a>
+        	<a href="#image2">2</a>
+        	<a href="#image3">3</a>
+    	</div>
 		<div class="middle-text">TOP DESTINANTIONS</div>
 		<div class="details">
 			<img src="img/details/details.jpg" width="290">
@@ -33,6 +42,8 @@
 				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
 			</div>
 		</div>
+		<a href="#" title="Вернуться к началу" class="topbutton"></a>
+		<div class="strela"></div>
 
 	</main>	
 
