--- a/module-6/index.html
+++ b/module-6/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link href=“https://fonts.googleapis.com/css?family=Dorsa” rel=“stylesheet”>
-	<link href=“https://fonts.googleapis.com/css?family=Pathway+Gothic+One” rel=“stylesheet” >
+	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 </head>
 
 
@@ -24,10 +25,10 @@
 			            <a href="#">AGENCY</a>
 			          </li>
 			          <li class="submenu__item">
-			            <a href="#"">NEWS</a>
+			            <a href="#">NEWS</a>
 			          </li>
 			          <li class="submenu__item">
-			            <a href="#"">TEAM</a>
+			            <a href="#">TEAM</a>
 			          </li>
 			        </ul>
 				</li>
@@ -41,7 +42,7 @@
 					<a href="#">TOURS</a>
 				</li>
 				<li class="menu__item">
-					<a href="#">BLOG</a>
+					<a href="blog.html">BLOG</a>
 				</li>
 				<li class="menu__item">
 					<a href="#">CONTACTS</a>
@@ -67,8 +68,72 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
 		</aside>
 		<hr>
+		<article>
+			<h2>WHAT WE OFFER</h2>
+			<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, vero, deleniti. Nihil at facilis hic, laudantium optio labore reiciendis porro veritatis eos vero autem, delectus voluptas, officiis ratione rerum fugiat, perferendis qui consequuntur quod.</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A sequi eum cumque odit temporibus obcaecati, molestiae, animi. Dolore dolorum laboriosam ea facilis provident officia, repellat soluta quibusdam quia? Fuga nihil porro soluta debitis, consectetur repudiandae perferendis praesentium itaque accusamus suscipit eos incidunt quidem vitae adipisci facere eaque animi eius laborum sequi asperiores sed, possimus aut repellendus ipsum laudantium. Nisi repellat minus ex. Incidunt ab veniam accusantium quod aliquam necessitatibus delectus fugit similique ullam optio eaque, id voluptate! Vero architecto sint, error quam ducimus expedita? Quae sed, sequi veritatis deserunt maiores, excepturi vero aliquam a illo atque vel ratione amet saepe.</p>
+			<div class="content">
+				<ul>
+					<li>Lorem ipsum dolor.</li>
+					<li>Voluptate, explicabo!</li>
+					<li>Officiis, similique.</li>
+					<li>Assumenda, autem!</li>
+					<li>Iusto, similique.</li>
+					<li>Enim, vitae, nulla?</li>
+					<li>Sint, molestias, officia.</li>
+					<li>Praesentium culpa!</li>
+					<li>Rerum, delectus, odit!</li>
+				</ul>
+			</div>
+		</article>
+		<aside>
+			<h2>TESTIMONIAL</h2>
+			<div class="bubble">	
+				<p class="bubble-text">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit edfeswfw ewfew
+				</p>
+			</div>
+			<br>
+			<h4 class="text-center ">Mark Jonson</h4>
+			<p class="text-center">Lorem ipsum dolor sit amet.</p>
+		</aside>
 	</main>
-			<hr>
+	<footer>	
+		<ul class="footer">
+			<li>
+				<a href="#">FAQS Page</a>
+				</li>
+			<li>
+				<a href="#">Useful</a>
+				</li>
+			<li>
+				<a href="#">Insurance</a>
+				</li>
+			<li>Contact Us:
+			</li>
+			<li>
+				<a href="#">People Say</a>
+				</li>
+			<li>
+				<a href="#">links</a>
+				</li>
+			<li>
+				<a href="#">Family</a>
+				</li>
+			<li>TEL: 1-800-234-5678 info@demolink.org
+			</li>
+		</ul>
+	</footer>
+	<div class="social-footer">
+		<ul class="icons">
+			<li><img src="img/social-icons/tw.png" alt=""></li>
+			<li><img src="img/social-icons/fb.png" alt=""></li>
+			<li><img src="img/social-icons/gp.png" alt=""></li>
+			<li><img src="img/social-icons/ln.png" alt=""></li>
+		</ul>
+		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
+		</span>
+	</div>
 
 </body>
 </html>
