--- a/module-6/index.html
+++ b/module-6/index.html
@@ -126,10 +126,10 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<li><img src="img/social-icons/tw.png" alt=""></li>
-			<li><img src="img/social-icons/fb.png" alt=""></li>
-			<li><img src="img/social-icons/gp.png" alt=""></li>
-			<li><img src="img/social-icons/ln.png" alt=""></li>
+			<li><a href="#"><img src="img/social-icons/tw.png" alt=""></a></li>
+			<li><a href="#"><img src="img/social-icons/fb.png" alt=""></a></li>
+			<li><a href="#"><img src="img/social-icons/gp.png" alt=""></a></li>
+			<li><a href="#"><img src="img/social-icons/ln.png" alt=""></a></li>
 		</ul>
 		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
