fix for module-5

--- a/module-5/index.html
+++ b/module-5/index.html
@@ -17,7 +17,7 @@
 				<a href="#">ABOUT</a>
 				<ul class="submenu">
 		          <li class="submenu__item">
-		            <a href="#">AGENCY</a>
+		            <a class="first-submenu" href="#">AGENCY</a>
 		          </li>
 		          <li class="submenu__item">
 		            <a href="#"">NEWS</a>
@@ -75,6 +75,20 @@
 			</div>
 			<div class="detail-fon"></div>
 			<div class="detail-button">Details</div>
+
+			<div class="detail-text-ny">
+				<h3>VENICE</h3>
+				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
+			</div>
+			<div class="detail-fon-ny"></div>
+			<div class="detail-button-ny">Details</div>
+
+			<div class="detail-text-paris">
+				<h3>VENICE</h3>
+				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
+			</div>
+			<div class="detail-fon-paris"></div>
+			<div class="detail-button-paris">Details</div>
 		</article>
 		<a href="#" title="Вернуться к началу" class="topbutton"></a>
 		<div class="strela"></div>
