--- a/module-6/about.html
+++ b/module-6/about.html
@@ -19,10 +19,10 @@
 					<a href="#">HOME</a>
 				</li>
 				<li class="menu__item">
-					<a href="#">ABOUT</a>
+					<a href="about.html">ABOUT</a>
 					<ul class="submenu">
 			          <li class="submenu__item">
-			            <a href="#">AGENCY</a>
+			            <a class="first-submenu" href="#">AGENCY</a>
 			          </li>
 			          <li class="submenu__item">
 			            <a href="#">NEWS</a>
@@ -33,7 +33,7 @@
 			        </ul>
 				</li>
 				<li class="menu__item">
-					<a href="#">GALLERY</a>
+					<a href="gallery.html">GALLERY</a>
 				</li>
 				<li class="menu__item">
 					<a href="#" class="logo">JOURNEY</a>
@@ -51,7 +51,7 @@
 		</nav>	
 	</header>
 	<main  class="main">
-		<section>
+		<section class="profiles">
 			<h2>AGENCY PROFILE</h2>
 			<img src="img/NY.jpg" alt="New Year">
 			<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, modi.</h4>
