--- a/module-5/index.html
+++ b/module-5/index.html
@@ -65,7 +65,7 @@
     	<div class="slider-text2">THAT ARE WORTH SEEING</div>
 
 		<div class="middle-text">TOP DESTINANTIONS</div>
-		<article class="details">
+		<div class="details">
 			<img src="img/details/details.jpg" width="290" alt="detail1">
 			<img src="img/details/details2.jpg" width="290" alt="detail2">
 			<img src="img/details/details3.jpg" width="290" alt="detail3">
@@ -89,7 +89,7 @@
 			</div>
 			<div class="detail-fon-paris"></div>
 			<div class="detail-button-paris">Details</div>
-		</article>
+		</div>
 		<a href="#" title="Вернуться к началу" class="topbutton"></a>
 		<div class="strela"></div>
 	</main>	
