fix for module 5

--- a/module-5/index.html
+++ b/module-5/index.html
@@ -65,31 +65,46 @@
     	<div class="slider-text2">THAT ARE WORTH SEEING</div>
 
 		<div class="middle-text">TOP DESTINANTIONS</div>
-		<div class="details">
-			<img src="img/details/details.jpg" width="290" alt="detail1">
-			<img src="img/details/details2.jpg" width="290" alt="detail2">
-			<img src="img/details/details3.jpg" width="290" alt="detail3">
-			<div class="detail-text">
+		<article class="details">
+			<div class="detail1">
+				<img src="img/details/details.jpg" width="290" alt="detail1">
+				<div class="detail-text">
 				<h3>VENICE</h3>
 				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
 			</div>
 			<div class="detail-fon"></div>
 			<div class="detail-button">Details</div>
+			</div>
 
-			<div class="detail-text-ny">
+
+
+			<div class="detail2">
+				<div class="detail-text-ny">
 				<h3>VENICE</h3>
 				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
 			</div>
 			<div class="detail-fon-ny"></div>
 			<div class="detail-button-ny">Details</div>
+			<img src="img/details/details2.jpg" width="290" alt="detail2">
+			</div>
 
-			<div class="detail-text-paris">
+
+
+			<div class="detail3">
+			<img src="img/details/details3.jpg" width="290" alt="detail3">
+						<div class="detail-text-paris">
 				<h3>VENICE</h3>
 				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
 			</div>
 			<div class="detail-fon-paris"></div>
 			<div class="detail-button-paris">Details</div>
-		</div>
+			</div>
+			
+
+			
+
+
+		</article>
 		<a href="#" title="Вернуться к началу" class="topbutton"></a>
 		<div class="strela"></div>
 	</main>	
