--- a/module-5/index.html
+++ b/module-5/index.html
@@ -45,7 +45,7 @@
 			<li class="logo-text">JOURNEY<li>
 		</ul>
 	</nav>	
-	<main>	
+	<main class="main">
         <!-- Images -->
      	<div id="images">
         	<img id="image1" src="img/slider/1.jpg" alt="slide1">
@@ -76,8 +76,6 @@
 			<div class="detail-button">Details</div>
 			</div>
 
-
-
 			<div class="detail2">
 				<div class="detail-text-ny">
 				<h3>VENICE</h3>
@@ -88,8 +86,6 @@
 			<img src="img/details/details2.jpg" width="290" alt="detail2">
 			</div>
 
-
-
 			<div class="detail3">
 			<img src="img/details/details3.jpg" width="290" alt="detail3">
 						<div class="detail-text-paris">
@@ -99,11 +95,6 @@
 			<div class="detail-fon-paris"></div>
 			<div class="detail-button-paris">Details</div>
 			</div>
-			
-
-			
-
-
 		</article>
 		<a href="#" title="Вернуться к началу" class="topbutton"></a>
 		<div class="strela"></div>
