--- a/module-7/contacts.html
+++ b/module-7/contacts.html
@@ -51,56 +51,47 @@
 		</nav>	
 	</header>
 	<main class="main">
-		 <div id="images">
-        	<img id="image1" src="img/slider/1.jpg" alt="slide1">
-        	<img id="image2" src="img/slider/2.jpg" alt="slide2">
-        	<img id="image3" src="img/slider/3.jpg" alt="slide3">
-        	<img id="image4" src="img/slider/4.jpg" alt="slide4">
-    	</div>
-    	<div class="slider">
-        	<a href="#image1">1</a>
-        	<a href="#image2">2</a>
-        	<a href="#image3">3</a>
-        	<a href="#image4">4</a>
-	        <div class="slider-fon1"></div>
-	    	<div class="slider-text1">THERE ARE PLENTY OF PLACES</div>
-	    	<div class="slider-fon2"></div>
-	    	<div class="slider-text2">THAT ARE WORTH SEEING</div>
-    	</div>
-
-
-		<div class="middle-text">TOP DESTINANTIONS</div>
-		<div class="details">
-			<div class="detail1">
-				<img src="img/details/details.jpg" width="290" alt="detail1">
-				<div class="detail-text">
-				<h3>VENICE</h3>
-				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
-			</div>
-			<div class="detail-fon"></div>
-			<div class="detail-button">Details</div>
-			</div>
-
-			<div class="detail2">
-				<div class="detail-text-ny">
-				<h3>VENICE</h3>
-				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
-			</div>
-			<div class="detail-fon-ny"></div>
-			<div class="detail-button-ny">Details</div>
-			<img src="img/details/details2.jpg" width="290" alt="detail2">
-			</div>
-
-			<div class="detail3">
-			<img src="img/details/details3.jpg" width="290" alt="detail3">
-						<div class="detail-text-paris">
-				<h3>VENICE</h3>
-				<span>.e malesuada turpis no. diam euismod, ut eleifend lorem malesuada. Ut mi massa, ullamcorper in dignissim id, ultrices sed nisl. Curabitur semper vehicula arcu. In aliquam, nulla vitae dapibus </span>
-			</div>
-			<div class="detail-fon-paris"></div>
-			<div class="detail-button-paris">Details</div>
-			</div>
+		<h2 class="map-h2">STAY IN TOUCH</h2>
+		<section class="contact-section">
+			<iframe class="gmap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2331.091722267942!2d30.522996115575555!3d50.42110227296936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1509038175917" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<div class="map-text">	
+			<span>8901 Marmora Road,</span><br>
+			<span>Glasgow, D04 89GR.</span>
+			<br>
+			<br>
+			<div class="freephone">
+				<span>Freephone:</span><span>+1 800 559 6580</span>
+			</div>	
+			<div class="freephone">
+				<span>Telephone:</span><span>+1 800 603 6035</span>
+			</div>	
+			<div class="freephone">
+				<span>FAX:</span><span>+1 800 889 9898</span>
+			</div>	
+			<span>E-mail:</span><span class="red-text">mail@demolink.org</span>
+			<br>
+			<br>
+			<br>
+			<span>9870 St Vincent Place,</span><br>
+			<span>Glasgow, DC 45 Fr 45.</span>
+			<br>
+			<br>
+			<div class="freephone">
+				<span>Freephone:</span><span>+1 800 559 6580</span>
+			</div>	
+			<div class="freephone">
+				<span>Telephone:</span><span>+1 800 603 6035</span>
+			</div>	
+			<div class="freephone">
+				<span>FAX:</span><span>+1 800 889 9898</span>
+			</div>	
+			<span>E-mail:</span><span class="red-text">mail@demolink.org</span>
 		</div>
+		<div class="form">
+			dawd
+			awawd
+		</div>
+		</section>
 	</main>
 	<footer>	
 		<ul class="footer">
