--- a/module-7/contacts.html
+++ b/module-7/contacts.html
@@ -51,7 +51,10 @@
 		</nav>	
 	</header>
 	<main class="main">
-		<h2 class="map-h2">STAY IN TOUCH</h2>
+		<div class="map-h2">
+			<h2>STAY IN TOUCH</h2>
+			<h2>CONTACT US</h2>
+		</div>
 		<section class="contact-section">
 			<iframe class="gmap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2331.091722267942!2d30.522996115575555!3d50.42110227296936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1509038175917" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 		<div class="map-text">	
@@ -88,8 +91,16 @@
 			<span>E-mail:</span><span class="red-text">mail@demolink.org</span>
 		</div>
 		<div class="form">
-			dawd
-			awawd
+			<form action="#" method="get" class="form-method">
+        			<input type="text" name="name" value="NAME">
+        			<input type="text" value="EMAIL" name="surname">
+        			<input type="text" value="SUBJECT" name="age">
+      				<textarea name="" id="" cols="10" rows="15" placeholder="MESSAGE"></textarea>
+    				<div class="buttons">
+    					<input type = "submit" value = "Clear">
+    					<input type = "submit" value = "Send">
+    				</div>
+    		</form>
 		</div>
 		</section>
 	</main>
